# CS_Study

./: .clang-format  CMakeLists.txt  CMakePresets.json  README.md
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: cpp.yml
scripts/: new_day.sh
src/: CMakeLists.txt  Hello  Hello.cpp  main.cpp
src/classes/: Person.cpp  Person.hpp
src/example/: example.cpp  example.hpp
tests/: CMakeLists.txt
tests/daily/: 2025-08-29_hello.cpp
